--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -32,6 +32,6 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/NonaAula/assets/fotos/icons/git.svg');
+    background-image: url('/assets/fotos/icons/git.svg');
     margin-right: .5rem;
 }
