--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -32,6 +32,6 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/fotos/icons/git.svg');
+    background-image: url('https://raw.githubusercontent.com/lumens7/SitePessoal/7596ec7febab1ae747fe398c471569ad530395c6/assets/fotos/icons/git.svg');
     margin-right: .5rem;
 }
