--- a/assets/css/lenguagens.css
+++ b/assets/css/lenguagens.css
@@ -22,6 +22,6 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/fotos/icons/check.svg');
+    background-image: url('https://raw.githubusercontent.com/lumens7/SitePessoal/7596ec7febab1ae747fe398c471569ad530395c6/assets/fotos/icons/check.svg');
     margin-right: .5rem;
 }
